examples/test/testpolicy623.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy623
  namespace: namespace197
spec:
  podSelector:
    matchLabels:
      key18: value1
      key33: value28
      key49: value26
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key7: value1
          key46: value18
      podSelector:
        matchLabels:
          key29: value21
          key9: value21
